--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/HoangDevNull/HandGesture-Nodejs#readme",
   "dependencies": {
+    "@tensorflow/tfjs": "^1.7.4",
+    "@tensorflow/tfjs-node": "^1.7.4",
     "express": "^4.17.1",
     "opencv4nodejs": "^5.6.0",
     "socket.io": "^2.3.0"
