--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "quiz": "node ./quiz"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@tensorflow/tfjs-node": "^1.7.4",
     "express": "^4.17.1",
     "opencv4nodejs": "^5.6.0",
+    "puppeteer": "^3.3.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
